--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyABVi5ma13GQeokZE9ckeYlNQt4kLUzXqI&libraries=places"></script>
 </head>
 
 <body>
